--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -9,8 +9,8 @@ jobs:
     name: 'Terraform'
     runs-on: ubuntu-latest
     env:
-      AWS ACCESS_KEY_ID: ${{ secrets.DEV_AWS_ACCESS_KEY_ID }} 
-      AWS SECRET ACCESS KEY: ${{ secrets.DEV_AWS_SECRET_ACCESS_KEY }}
+      AWS_ACCESS_KEY_ID: ${{ secrets.DEV_AWS_ACCESS_KEY_ID }} 
+      AWS_SECRET_ACCESS_KEY: ${{ secrets.DEV_AWS_SECRET_ACCESS_KEY }}
 
     defaults:
       run:
