--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -11,6 +11,8 @@ jobs:
     env:
       AWS_ACCESS_KEY_ID: ${{ secrets.DEV_AWS_ACCESS_KEY_ID }} 
       AWS_SECRET_ACCESS_KEY: ${{ secrets.DEV_AWS_SECRET_ACCESS_KEY }}
+      TF_VAR_my_username: ${{ secrets.AWS_USERNAME }}
+      TF_VAR_my_password: ${{ secrets.AWS_PASSWORD }}
 
     defaults:
       run:
