--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,8 +1,8 @@
 on:
   push:
-    branches: [ main ]
+    branches: [ new ]
   pull_request:
-    branches: [main]
+    branches: [new]
   workflow_dispatch:
 jobs:
   terraform:
