--- a/.github/workflows/blank1.yml
+++ b/.github/workflows/blank1.yml
@@ -13,6 +13,7 @@ jobs:
       AWS_SECRET_ACCESS_KEY: ${{ secrets.DEV_AWS_SECRET_ACCESS_KEY }}
       TF_VAR_DB_USER_NAME: ${{ secrets.DB_USER_NAME }}
       TF_VAR_DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
+      TF_VAR_VPC_ID: ${{secrets.vpc_id}}
 
     defaults:
       run:
